--- a/transformed.cabal
+++ b/transformed.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a6685337feac1794eb46dee3a89dab9932fcb26a21887581a72ce2e10fbdc31c
+-- hash: 74cc2686dcfaa45f46895e353af10681ebcf4d80e1c55f28a4ec9c496255d316
 
 name:           transformed
 version:        0.1.0.0
@@ -35,6 +35,7 @@ library
   default-extensions:
       DerivingVia
       FlexibleInstances
+      GeneralizedNewtypeDeriving
       KindSignatures
       MultiParamTypeClasses
       ScopedTypeVariables
@@ -57,6 +58,7 @@ test-suite transformed-test
   default-extensions:
       DerivingVia
       FlexibleInstances
+      GeneralizedNewtypeDeriving
       KindSignatures
       MultiParamTypeClasses
       ScopedTypeVariables
